--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "synthetic-exporter",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,28 +9,11 @@
     "build": "yarn lint && yarn clean && tsc -p .",
     "clean": "rimraf dist",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.6",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.9.5",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^25.5.4",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.2.1",
-    "ts-jest": "^25.3.1",
-    "ts-node": "^8.8.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
-  },
   "dependencies": {
     "@elastic/ecs-winston-format": "^1.0.0",
     "exponential-backoff": "^3.1.0",
@@ -39,5 +22,57 @@
     "prom-client": "^13.1.0",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.10",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.9.5",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "commitlint": "^12.0.1",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.3",
+    "jest": "^25.5.4",
+    "nodemon": "^2.0.2",
+    "prettier": "^2.2.1",
+    "semantic-release": "^17.4.1",
+    "ts-jest": "^25.3.1",
+    "ts-node": "^8.8.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "commit-msg": "yarn commitlint --edit $1"
+    }
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json",
+            "CHANGELOG.md"
+          ]
+        }
+      ]
+    ]
   }
 }
