--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "synthetic-exporter",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "private": "true",
+  "private": true,
   "scripts": {
     "dev": "nodemon",
     "start": "yarn build && node dist/index.js",
