--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rimraf dist",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -30,7 +31,7 @@
     "@semantic-release/npm": "^7.0.10",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.6",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^25.2.3",
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
@@ -43,7 +44,7 @@
     "nodemon": "^2.0.2",
     "prettier": "^2.2.1",
     "semantic-release": "^17.4.1",
-    "ts-jest": "^25.3.1",
+    "ts-jest": "^25.5.1",
     "ts-node": "^8.8.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
