--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest --detectOpenHandles --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/node": "^13.9.5",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "commitlint": "^12.0.1",
@@ -42,8 +43,10 @@
     "husky": "^5.1.3",
     "jest": "^25.5.4",
     "nodemon": "^2.0.2",
+    "playwright": "^1.9.2",
     "prettier": "^2.2.1",
     "semantic-release": "^17.4.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^25.5.1",
     "ts-node": "^8.8.1",
     "tsconfig-paths": "^3.9.0",
