--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Run linter
         run: yarn lint
 
+      - name: Run linter
+        run: yarn test
+
       - name: Run build
         run: yarn build
 
