--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prepare": "husky install",
-    "test": "jest --detectOpenHandles --coverage"
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
