--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Run linter
+      - name: Run test
         run: yarn test
 
       - name: Upload coverage to Codecov
